<resources>
    <string name="app_name">Soul Meds</string>
    <string name="action_settings">Settings</string>
    <string name="share_text">Check out this Bible verse from the Soul Meds mobile app</string>
    <string name="bible_reference">Scripture quotations taken from the New American Standard Bible (NASB), Copyright 1960, 1962, 1963, 1968, 1971,
        1972, 1973, 1975, 1977, 1995 by The Lockman Foundation. Used by permission. www.Lockman.org</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="done_btn">Done</string>
    <string name="title_activity_emergency">Set Symptoms</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_login_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_login_navigate">Sign In To Existing Account</string>
    <string name="action_register_navigate">Create an Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_alarms">Prescription Manager</string>
    <string name="action_delete_item">Delete</string>
    <string name="action_edit_item">Edit</string>
    <string name="title_alarms_symptoms">Select a Symptom</string>
    <string name="title_alarms_times">Set Alarm</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="channel_id_alarms">AlarmsChannel</string>
    <string name="channel_name">Alarms</string>
    <string name="channel_description">Notifications for Prescription Alarms</string>
    <string name="pref_header_tutorial">Tutorial</string>
    <string name="pref_header_change_prescriptions">Change Prescriptions</string>
    <string name="pref_header_change_alarms">Change Alarms</string>
    <string name="pref_header_reset">Reset Prescriptions &amp; Alarms</string>
    <string name="pref_header_logout">Logout</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_email_support">Email Support</string>
    <string name="set_alarms">Set Alarms</string>
    <string name="save">Save</string>
    <string name="alarm_1">Alarm 1</string>
    <string name="alarm_2">Alarm 2</string>
    <string name="alarm_3">Alarm 3</string>
    <string name="pref_header_change_symptoms">Change Symptoms</string>
    <string name="symptom_1">Symptom 1</string>
    <string name="symptom_2">Symptom 2</string>
    <string name="symptom_3">Symptom 3</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="set_symptoms">Set Symptoms</string>
    <string name="choose_symptoms">Choose Symptoms</string>
</resources>