<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brendansapps.soulmeds.AlarmsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/alarms_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:padding="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="0dp"
                android:padding="0dp">

                <Button
                    android:id="@+id/alarms_btn_cancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/cancel_btn"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/set_alarms"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/alarms_btn_save"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/save"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_alarm_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/alarm_1"
        app:layout_constraintBottom_toTopOf="@+id/tp_clock_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tp_clock_1" />

    <TimePicker
        android:id="@+id/tp_clock_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/tp_clock_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_alarm_1"
        app:layout_constraintTop_toBottomOf="@+id/alarms_appbar" />

    <TextView
        android:id="@+id/tv_alarm_2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/alarm_2"
        app:layout_constraintBottom_toTopOf="@+id/tp_clock_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tp_clock_2" />

    <TimePicker
        android:id="@+id/tp_clock_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/tp_clock_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_alarm_2"
        app:layout_constraintTop_toBottomOf="@id/tp_clock_1" />

    <TextView
        android:id="@+id/tv_alarm_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/alarm_3"
        app:layout_constraintBottom_toBottomOf="@+id/tp_clock_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tp_clock_3" />

    <TimePicker
        android:id="@+id/tp_clock_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/volume_seeker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_alarm_3"
        app:layout_constraintTop_toBottomOf="@id/tp_clock_2" />

    <TextView
        android:id="@+id/volume_seeker"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/alarm_volume"
        app:layout_constraintBottom_toBottomOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="200"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volume_seeker" />

</android.support.constraint.ConstraintLayout>